Simer integration and Model C examples.
Signed-off-by: Timothy Rule (VM/EMT3) <Timothy.Rule@de.bosch.com>

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,3 +1,4 @@
 FROM mcr.microsoft.com/devcontainers/universal:2
+COPY .devcontainer/.bash_aliases /home/codespace/.bash_aliases
 RUN set -eax; \
     sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d -b /usr/local/bin
