--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,4 +5,13 @@
     },
     "features": {
     },
+    "runArgs": [
+        "--env-file",".devcontainer/devcontainer.env"
+    ],
+    "remoteEnv": {
+    },
+    "onCreateCommand": [
+    ],
+    "postCreateCommand": [
+    ]
 }
