Add redis ports and testscript to devcontainer.
Signed-off-by: Timothy Rule (VM/EMT3) <Timothy.Rule@de.bosch.com>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,5 +13,13 @@
     "onCreateCommand": [
     ],
     "postCreateCommand": [
-    ]
+    ],
+    "portsAttributes": {
+        "2159": {
+            "label": "gdb"
+        },
+        "6379": {
+            "label": "redis"
+        }
+    }
 }
