--- a/.devcontainer/devcontainer.env
+++ b/.devcontainer/devcontainer.env
@@ -1,2 +1,3 @@
-DSE_MODELC_VERSION=2.1.13
+DSE_MODELC_VERSION=2.1.15
 DSE_SIMER_IMAGE=ghcr.io/boschglobal/dse-simer:latest
+TASK_X_REMOTE_TASKFILES=1
