Refine AST install.
Signed-off-by: Timothy Rule (VM/EMT3) <Timothy.Rule@de.bosch.com>

--- a/ast/Makefile
+++ b/ast/Makefile
@@ -22,6 +22,10 @@ cmd: $(CLI_TOOLS)
 $(CLI_TOOLS): $(SRC)
 	go build $(GOFLAGS) -o $@ ./cmd/$(subst $(BIN_DIR)/,,$@)
 
+.PHONY: install
+install: build
+	ln -sf $(BIN_DIR)/$(PACKAGE) ~/.local/bin/dse-$(PACKAGE)
+
 
 .PHONY: test
 test:
