--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -16,6 +16,14 @@ FROM mcr.microsoft.com/devcontainers/universal:2
 RUN set -eux; \
     wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 -O /usr/bin/yq; \
     chmod +x /usr/bin/yq;
+RUN set -eux; \
+	apt-get -y update; \
+	apt-get -y upgrade; \
+    apt-get -y install --no-install-recommends \
+        jupyter-notebook \
+    && \
+    apt-get clean; \
+    rm -rf /var/lib/apt/lists/*;
 COPY .devcontainer/.bash_aliases /home/codespace/.bash_aliases
 COPY --from=go /usr/local/bin/testscript /usr/local/bin/testscript
 COPY --from=go /usr/local/bin/task /usr/local/bin/task
