SDP:DSL: Add file and uid keywords
* dsl - addition of new keyword structure

* DSL code update and bug fix

Signed-off-by: Timothy Rule (VM/EMT3) <Timothy.Rule@de.bosch.com>

--- a/dsl/package.json
+++ b/dsl/package.json
@@ -9,7 +9,8 @@
     "main": "bin/parse2ast.js",
     "preferGlobal": true,
     "bin": {
-        "dse-parse2ast": "./bin/parse2ast.js"
+        "dse-parse2ast": "./bin/parse2ast.js",
+        "parse2ast": "./bin/parse2ast.js"
     },
     "directories": {
         "lib": "./lib"
