--- a/ast/cmd/ast/testdata/ast/openloop_ast.yml
+++ b/ast/cmd/ast/testdata/ast/openloop_ast.yml
@@ -45,6 +45,7 @@ spec:
             models:
               dse.fmi.mcl:
                 path: fmimcl
+                mcl: true
             workflows:
               generate-fmimcl:
                 generates:
