--- a/ast/internal/app/generate/testdata/ast__model_fmu.yaml
+++ b/ast/internal/app/generate/testdata/ast__model_fmu.yaml
@@ -48,6 +48,7 @@ spec:
             models:
               dse.fmi.mcl:
                 path: fmimcl
+                mcl: true
             tasks:
               generate-fmimcl:
                 generates:
