--- a/ast/internal/app/generate/testdata/ast__openloop.yaml
+++ b/ast/internal/app/generate/testdata/ast__openloop.yaml
@@ -14,7 +14,7 @@ spec:
           model: dse.modelc.csv
           uses: dse.modelc
           channels:
-            - alias: scalar_channel
+            - alias: signal_channel
               name: physical
           env:
             - name: CSV_FILE
@@ -38,7 +38,7 @@ spec:
           model: dse.fmi.mcl
           uses: dse.fmi
           channels:
-            - alias: scalar_channel
+            - alias: signal_channel
               name: physical
             - alias: network_channel
               name: network
@@ -58,6 +58,7 @@ spec:
             models:
               dse.fmi.mcl:
                 path: fmimcl
+                mcl: true
             tasks:
               generate-fmimcl:
                 generates:
