Outline of Complete E2E Example.
Signed-off-by: Timothy Rule (VM/EMT3) <Timothy.Rule@de.bosch.com>

--- a/examples/e2e/project/signalgroup.yaml
+++ b/examples/e2e/project/signalgroup.yaml
@@ -1,7 +1,7 @@
 ---
 kind: SignalGroup
 metadata:
-  name: scalar_channel
+  name: signal_channel
   labels:
     model: input
     channel: signal_vector
