VSCode and DSL visualization improvements.
Signed-off-by: Timothy Rule (VM/EMT3) <Timothy.Rule@de.bosch.com>

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -13,17 +13,24 @@ RUN GOBIN=/usr/local/bin go install github.com/go-task/task/v3/cmd/task@latest
 # Construct Final Image
 # =====================
 FROM mcr.microsoft.com/devcontainers/universal:2
+
+ENV DEBIAN_FRONTEND=noninteractive
+
 RUN set -eux; \
     wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 -O /usr/bin/yq; \
     chmod +x /usr/bin/yq;
+
 RUN set -eux; \
-	apt-get -y update; \
-	apt-get -y upgrade; \
+    apt-get -y update; \
+    apt-get -y -o Dpkg::Options::="--force-confdef" -o Dpkg::Options::="--force-confold" upgrade; \
     apt-get -y install --no-install-recommends \
         jupyter-notebook \
     && \
     apt-get clean; \
     rm -rf /var/lib/apt/lists/*;
+
+RUN npm install -g typescript
+
 COPY .devcontainer/.bash_aliases /home/codespace/.bash_aliases
 COPY --from=go /usr/local/bin/testscript /usr/local/bin/testscript
 COPY --from=go /usr/local/bin/task /usr/local/bin/task
