--- a/lsp/Makefile
+++ b/lsp/Makefile
@@ -7,7 +7,7 @@ default: build
 .PHONY: build
 build:
 	mkdir -p out
-	npm install && npm install -g vsce
+	npm install && npm install -g vsce && npm install -g http-server
 	vsce package --out ./out
 
 .PHONY: clean
