LSP make install target

--- a/lsp/Makefile
+++ b/lsp/Makefile
@@ -7,8 +7,13 @@ default: build
 .PHONY: build
 build:
 	mkdir -p out
+	mkdir -p out/bin
 	npm install && npm install -g vsce && npm install -g http-server
 	vsce package --out ./out
+
+.PHONY: install
+install: build
+#	code --install-extension out .vsix
 
 .PHONY: clean
 clean:
