--- a/lsp/Makefile
+++ b/lsp/Makefile
@@ -6,14 +6,23 @@ default: build
 
 .PHONY: build
 build:
-	mkdir -p out
 	mkdir -p out/bin
+	mkdir -p bin/graph/yaml
 	npm install && npm install -g vsce && npm install -g http-server
-	vsce package --out ./out
+	vsce package --out ./out/bin/dse.vsix
 
+EXTENSION_NAME := dse.dse-1.0.0
 .PHONY: install
 install: build
-#	code --install-extension out .vsix
+#	code --install-extension ./out/bin/dse.vsix
+	rm -rf /home/codespace/.vscode-remote/extensions/$(EXTENSION_NAME)
+	rm -rf /home/codespace/.vscode-remote/extensions/temp
+	mkdir -p /home/codespace/.vscode-remote/extensions/temp
+	unzip -q ./out/bin/dse.vsix "extension/*" -d /home/codespace/.vscode-remote/extensions/temp
+	mkdir -p /home/codespace/.vscode-remote/extensions/$(EXTENSION_NAME)
+	mv /home/codespace/.vscode-remote/extensions/temp/extension/* /home/codespace/.vscode-remote/extensions/$(EXTENSION_NAME)/
+	rm -rf /home/codespace/.vscode-remote/extensions/temp
+	@exit 0
 
 .PHONY: clean
 clean:
