--- a/dsl/package.json
+++ b/dsl/package.json
@@ -16,7 +16,8 @@
         "lib": "./lib"
     },
     "dependencies": {
-        "chevrotain": "^11.0.3"
+        "chevrotain": "^11.0.3",
+        "esbuild": "^0.25.1"
     },
     "devDependencies": {
         "@types/node": "^22.10.1",
