Support authentication and multi-arch.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,6 +13,7 @@
     "remoteEnv": {},
     "onCreateCommand": [],
     "postCreateCommand": "make && make install",
+    "forwardPorts": [3001],
     "portsAttributes": {
         "2159": {
             "label": "gdb"
