--- a/lsp/Makefile
+++ b/lsp/Makefile
@@ -14,14 +14,17 @@ build:
 EXTENSION_NAME := dse.dse-1.0.0
 .PHONY: install
 install: build
-#	code --install-extension ./out/bin/dse.vsix
-	rm -rf /home/codespace/.vscode-remote/extensions/$(EXTENSION_NAME)
-	rm -rf /home/codespace/.vscode-remote/extensions/temp
-	mkdir -p /home/codespace/.vscode-remote/extensions/temp
-	unzip -q ./out/bin/dse.vsix "extension/*" -d /home/codespace/.vscode-remote/extensions/temp
-	mkdir -p /home/codespace/.vscode-remote/extensions/$(EXTENSION_NAME)
-	mv /home/codespace/.vscode-remote/extensions/temp/extension/* /home/codespace/.vscode-remote/extensions/$(EXTENSION_NAME)/
-	rm -rf /home/codespace/.vscode-remote/extensions/temp
+	@if [ "$(CODESPACES)" = "true" ]; then \
+		rm -rf /home/codespace/.vscode-remote/extensions/$(EXTENSION_NAME);	\
+		rm -rf /home/codespace/.vscode-remote/extensions/temp;	\
+		mkdir -p /home/codespace/.vscode-remote/extensions/temp;	\
+		unzip -q ./out/bin/dse.vsix "extension/*" -d /home/codespace/.vscode-remote/extensions/temp;	\
+		mkdir -p /home/codespace/.vscode-remote/extensions/$(EXTENSION_NAME);	\
+		mv /home/codespace/.vscode-remote/extensions/temp/extension/* /home/codespace/.vscode-remote/extensions/$(EXTENSION_NAME)/;	\
+		rm -rf /home/codespace/.vscode-remote/extensions/temp;	\
+	else \
+		echo y | code --install-extension ./out/bin/dse.vsix; \
+	fi
 	@exit 0
 
 .PHONY: clean
