Post Run hook script for processing measurements.
Signed-off-by: Timothy Rule (VM/EMT3) <Timothy.Rule@de.bosch.com>

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -30,6 +30,7 @@ RUN set -eux; \
     rm -rf /var/lib/apt/lists/*;
 
 RUN npm install -g typescript
+RUN pip install asammdf[gui]
 
 COPY .devcontainer/.bash_aliases /home/codespace/.bash_aliases
 COPY --from=go /usr/local/bin/testscript /usr/local/bin/testscript
