--- a/examples/graph/duplicate_writes/sim_with_error/model/linear/data/signalgroup.yaml
+++ b/examples/graph/duplicate_writes/sim_with_error/model/linear/data/signalgroup.yaml
@@ -14,7 +14,7 @@ spec:
         fmi_variable_vref: "1"
       signal: input
     - annotations:
-        fmi_variable_causality: input
+        fmi_variable_causality: output
         fmi_variable_name: factor
         fmi_variable_type: Real
         fmi_variable_vref: "2"
