--- a/.devcontainer/devcontainer.env
+++ b/.devcontainer/devcontainer.env
@@ -1,3 +1,4 @@
 DSE_MODELC_VERSION=2.1.15
 DSE_SIMER_IMAGE=ghcr.io/boschglobal/dse-simer:latest
+DSE_REPORT_IMAGE=ghcr.io/boschglobal/dse-report:latest
 TASK_X_REMOTE_TASKFILES=1
