--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,6 +23,8 @@ env:
 jobs:
   report:
     if: startsWith(github.ref, 'refs/tags/')
+    permissions:
+      packages: write
     runs-on: [ubuntu-latest]
     steps:
       - name: Checkout
